# Jarvis

jarvis-agent/: .env.example  .gitignore  check_structure.py  pyproject.toml  setup.py
jarvis-agent/data/knowledge/: chroma.sqlite3
jarvis-agent/data/knowledge_seed/: git_commands.md  python_basics.md
jarvis-agent/data/knowledge_seed/python/: async_programming.md
jarvis-agent/scripts/: generate_knowledge_base.py  init_knowledge.py
jarvis-agent/src/jarvis/: config.py  main.py
jarvis-agent/src/jarvis/agent/: prompts.py  runner.py  state.py  tool_agent.py
jarvis-agent/src/jarvis/knowledge/: __init__.py  knowledge_base.py
jarvis-agent/src/jarvis/memory/: schema.sql  store.py
jarvis-agent/src/jarvis/tools/: calendar.py  code_assistant.py  email.py  filesystem.py  knowledge.py  open_app.py  registry.py  run_code.py  shell.py  spotify.py  vision.py  web_search.py
jarvis-agent/src/jarvis/ui/: cli.py
jarvis-agent/src/jarvis/vision/: __init__.py  accessibility.py  screenshot.py  vision_analyzer.py
jarvis-agent/src/jarvis/voice/: stt.py  tts.py  voice_loop.py  wake_word.py
jarvis-agent/src/jarvis/web/: server.py
jarvis-agent/src/jarvis/web/static/: app.js  index.html
jarvis-agent/src/sandbox/docker/: Dockerfile.node  Dockerfile.python
jarvis-agent/src/scripts/: setup.sh
sandbox/docker/: Dockerfile.node  Dockerfile.python
